info_TEXINFOS = DevIL_manual.texi

dvi:
	echo "The DVI documentation won't be built. It is not feasible since it contains a lot of images. Build PDF or HTML docs instead..."

EXTRA_DIST = generate-images.sh
EXTRA_DIST += images/DevIL.jpg\
	     images/DevIL.png\
	     images/devil_msvc_include.png\
	     images/devil_msvc_lib.png\
	     images/ilu_small_stairway_alienify.jpg\
	     images/ilu_small_stairway_blurAvg_10.jpg\
	     images/ilu_small_stairway_blurGaussian_10.jpg\
	     images/ilu_small_stairway_contrast_0.4.jpg\
	     images/ilu_small_stairway_contrast_1.7.jpg\
	     images/ilu_small_stairway_emboss.jpg\
	     images/ilu_small_stairway_equalize.jpg\
	     images/ilu_small_stairway_gammaCorrect_0.7.jpg\
	     images/ilu_small_stairway_gammaCorrect_1.6.jpg\
	     images/ilu_small_stairway_mirror.jpg\
	     images/ilu_small_stairway_negative.jpg\
	     images/ilu_small_stairway_noisify_0.1.jpg\
	     images/ilu_small_stairway_noisify_0.8.jpg\
	     images/ilu_small_stairway_pixelize_5.jpg\
	     images/ilu_small_stairway_saturate1f_0.6.jpg\
	     images/ilu_small_stairway_sharpen_1.8_2.jpg\
	     images/ilu_small_stairway_sharpen_2.1_3.jpg\
	     images/ilu_small_stairway_wave_1.2.jpg\
	     images/original_stairway.jpg\
	     images/small_stairway.jpg
